# secure-bare-metal-bootloader

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: cpp17-design-patterns-and-solid.md  deep-architecture.md  flash-layout.md  validation-plan.md
docs/design/: README.md  implementation-roadmap.md  interface-control.md  requirements.md  runtime-design.md  system-design.md  validation-plan.md
docs/design/diagrams/: system-design.drawio
docs/diagrams/: README.md  full-system-uml.drawio
include/bootloader/: Bootloader.hpp
src/: Bootloader.cpp  main.c  main.cpp
tests/: BootloaderTests.cpp  ProfileTests.cpp  test_repo_smoke.py
